ecmascript/parser/tests/test262-error-references/fail/a660fb69f32f7ad2.js.stderr
error: Unexpected token Some(LParen)
 --> $DIR/tests/test262-parser/fail/a660fb69f32f7ad2.js:1:15
  |
1 | try {} catch ((e)) {}
  |               ^

